--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RecorderMainActivity"
+            android:name=".VideoRecordeActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".VideoManageActivity"
